# aeon-memory

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  APPROVED_DIFFERENCES.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  DIFFERENTIAL_E2E.md  Dockerfile.rust  NATIVE_PACKAGE_CN.md  OFFLOAD_API_CONTRACT.md  README.md  README_CN.md  README_EN.md  README_RUST.md  RELEASING.md  RUST_MIGRATION_PLAN.md  SECURITY.md  SUPPORT.md  TEST_PARITY_MATRIX.md  THIRD_PARTY_NOTICES.md  TS_DIFFERENTIAL_BASELINE.md  package-lock.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
config/: aeon-memory.example.yaml
crates/aeon-memory-core/: Cargo.toml
crates/aeon-memory-core/src/: aeon_memory_core.rs  error.rs  fts_query.rs  lib.rs  persona.rs  profile.rs  scene.rs  search.rs  types.rs
crates/aeon-memory-core/src/config/: mod.rs
crates/aeon-memory-core/src/embedding/: openai.rs
crates/aeon-memory-core/src/hooks/: auto_capture.rs  auto_recall.rs  mod.rs
crates/aeon-memory-core/src/llm/: openai.rs
crates/aeon-memory-core/src/offload/: engine.rs  inject.rs  l3.rs  mermaid.rs  mod.rs  parser.rs  prompt.rs  reclaim.rs  storage.rs  token.rs  types.rs
crates/aeon-memory-core/src/pipeline/: checkpoint.rs  manager.rs  mod.rs
crates/aeon-memory-core/src/prompt/: l1_dedup.rs  l1_extraction.rs  mod.rs
crates/aeon-memory-core/src/prompt/resources/: scene_extraction_template.txt
crates/aeon-memory-core/src/record/: l0_recorder.rs  l1_dedup.rs  l1_extractor.rs  l1_writer.rs  mod.rs
crates/aeon-memory-core/src/seed/: input.rs  mod.rs  runtime.rs  types.rs
crates/aeon-memory-core/src/tools/: conversation_search.rs  memory_search.rs  mod.rs
crates/aeon-memory-core/src/utils/: managed_timer.rs  manifest.rs  memory_cleaner.rs  mod.rs  no_think_fetch.rs  sanitize.rs  serial_queue.rs  session_filter.rs  text_utils.rs  time.rs
crates/aeon-memory-core/tests/: cleaner_oracle.rs  config_search_oracle.rs  dedup_runtime_compat.rs  embedding_runtime_compat.rs  golden_compat.rs  l0_runtime_compat.rs  l3_compression_oracle.rs  l3_token_oracle.rs  offload.rs  offload_complete.rs  offload_fast_path_oracle.rs  offload_parser_oracle.rs  offload_state_oracle.rs  persona_trigger_oracle.rs  pipeline_branches_compat.rs  recall_runtime_compat.rs  reclaim_oracle.rs  runtime_trace_compat.rs  scene_persona_fs_oracle.rs  session_filter_oracle.rs  time_production_oracle.rs  utils_oracle.rs
crates/aeon-memory-core/tests/fixtures/: bm25_rank.json  cleaner_oracle.json  config_search_oracle.json  dedup_runtime_oracle.json  degraded_l1_oracle.json  embedding_runtime_oracle.json  fts_query.json  gen-golden-fixtures.mjs  gen-offload-legacy-replay.mjs  gen-ts-cleaner-oracle.mjs  gen-ts-config-search-oracle.mjs  gen-ts-dedup-oracle.mjs  gen-ts-degraded-l1-oracle.mjs  gen-ts-embedding-oracle.mjs  gen-ts-l0-oracle.mjs  gen-ts-l1-extraction-oracle.mjs  gen-ts-l3-compression-oracle.mjs  gen-ts-l3-token-oracle.mjs  gen-ts-offload-fast-path-oracle.mjs  gen-ts-offload-parser-oracle.mjs  gen-ts-offload-state-oracle.mjs  gen-ts-persona-trigger-oracle.mjs  gen-ts-pipeline-branches.mjs  gen-ts-recall-oracle.mjs  gen-ts-reclaim-oracle.mjs  gen-ts-runtime-trace.mjs  gen-ts-scene-persona-fs-oracle.mjs  gen-ts-session-filter-oracle.mjs  gen-ts-time-production-oracle.mjs  gen-ts-utils-oracle.mjs  l0_runtime_oracle.json  l1_extraction_oracle.json  l1_jsonl.json  l1_jsonl_record.json  l3_compression_oracle.json  l3_token_oracle.json  offload_fast_path_oracle.json  offload_parser_oracle.json  offload_prompt_legacy_replay.json  offload_runtime_oracle.json  (+21 more)
crates/aeon-memory-gateway/: Cargo.toml
crates/aeon-memory-gateway/src/: adapter.rs  api.rs  cli.rs  config.rs  lib.rs  runtime.rs  service.rs
crates/aeon-memory-gateway/tests/: dedup_retry_parity.rs  interface.rs  long_term_layered_recall.rs  offload_lifecycle.rs  process_boundary.rs  production_runtime.rs
crates/aeon-memory-gateway/tests/fixtures/: disabled_capture_oracle.json  embedding_gateway_oracle.json  gen-ts-disabled-capture-oracle.mjs  gen-ts-recall-http-oracle.mjs  offload_production_oracle.json  recall_http_oracle.json
crates/aeon-memory-store-sqlite/: Cargo.toml
crates/aeon-memory-store-sqlite/src/: adapter.rs  connection.rs  l0.rs  l1.rs  lib.rs  schema.rs
crates/aeon-memory-store-sqlite/tests/: compat.rs  embedding_reindex_differential.rs
crates/aeon-memory-store-sqlite/tests/fixtures/: embedding_reindex_oracle.json  gen-ts-db.mjs  gen-ts-embedding-reindex-oracle.mjs  vectors-ts.db
scripts/: mock-openai.mjs  (+10 more)
(+22 files in other folders)
