[workspace]
resolver = "2"
members = [
    "crates/aeon-memory-core",
    "crates/aeon-memory-gateway",
    "crates/aeon-memory-store-sqlite",
]

[workspace.package]
version = "0.7.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/HuChundong/aeon-memory"
homepage = "https://github.com/HuChundong/aeon-memory"
readme = "README.md"
rust-version = "1.85"

[workspace.dependencies]
aeon-memory-core = { path = "crates/aeon-memory-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
ureq = "3"
chrono-tz = "0.10"
jieba-rs = "0.10"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
sha2 = "0.11"
md-5 = "0.11"

[profile.release]
# Keep the standalone artifacts small without changing runtime semantics.
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
