[package]
name = "aeon-memory-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Standalone CLI and HTTP server for Aeon Memory"

[dependencies]
aeon-memory-core.workspace = true
aeon-memory-store-sqlite = { path = "../aeon-memory-store-sqlite" }
async-trait.workspace = true
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
subtle = "2"
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tower-http = { version = "0.7", features = ["cors"] }
chrono.workspace = true
ureq.workspace = true

[dev-dependencies]
http-body-util = "0.1"
rusqlite = { version = "0.40", features = ["bundled"] }
tower = { version = "0.5", features = ["util"] }

[lib]
name = "aeon_memory_gateway"

[[bin]]
name = "aeon-memory"
path = "src/bin/aeon-memory.rs"

[[bin]]
name = "aeon-memory-server"
path = "src/bin/aeon-memory-server.rs"
